[tool.poetry]
name = "mqtt-monitor"
version = "0.0.2"
description = "MQTT Monitoring thing"
authors = ["James Hogkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.6.1"
click = "^8.1.2"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.6"
mypy = "^0.991"
black = "^22.10.0"
pytest = "^7.2.0"
pylint-pydantic = "^0.1.4"

[tool.poetry.scripts]
mqtt-monitor = "mqtt_monitor:cli"

[tool.pylint.MASTER]
disable="W0511"
max-line-length=200

# https://github.com/samuelcolvin/pydantic/issues/1961#issuecomment-759522422
extension-pkg-whitelist="pydantic"
load-plugins="pylint_pydantic"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
