[tool.poetry]
name = "mqtt-monitor"
version = "0.0.2"
description = "MQTT Monitoring thing"
authors = [
    "James Hogkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^1.6.1"
click = "^8.1.2"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"
mypy = "^1.0"
black = "^23.1.0"
pytest = "^7.2.0"
pylint-pydantic = "^0.2.0"

[tool.poetry.scripts]
mqtt-monitor = "mqtt_monitor:cli"

[tool.pylint.MASTER]
disable = "W0511"
max-line-length = 200
extension-pkg-whitelist = "pydantic"
load-plugins = "pylint_pydantic"

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "mqtt-monitor"
description = "MQTT Monitoring thing"
license = "MIT"
version = "0.0.2"
authors = [
    { name = "James Hogkinson", email = "james@terminaloutcomes.com" },
]
